--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </button>
 
     <div id="easter-egg"><style>body{transform:rotate(25deg)}</style></div>
-
+<!-- what ya doin? flip the page ya dingus -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -40,7 +40,7 @@
             <a class="dropdown-item" href="#">View My HTML/CSS Projects</a>
             <a class="dropdown-item" href="#">View My CS#arp Projects</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="#">Something else here, games</a>
           </div>
         </li>
         <!-- <li class="nav-item">
