Feb 18th Classwork

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div id="easter-egg"><style>body{transform:rotate(180deg)}</style></div>
-<!-- what ya doin? flip the page ya dingus -->
+    <!-- <div id="easter-egg"><style>body{transform:rotate(180deg)}</style></div> -->
+<!-- what ya doin? aus -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
