--- a/index.html
+++ b/index.html
@@ -54,24 +54,24 @@
     </div>
   </nav>
 
-  <nav aria-label="breadcrumb">
+  <!-- <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="#">Home</a></li>
       <li class="breadcrumb-item"><a href="#">Library</a></li>
       <li class="breadcrumb-item active" aria-current="page">Data</li>
     </ol>
-  </nav>
+  </nav> -->
 
   <div class="alert alert-warning alert-dismissible fade show" role="alert">
-    <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+    <strong>Test button to flip page or do something interesting</strong> Blah Blah Blah
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
 
   <div class="container text-vertical-center name">
-    <h1 id="namehead" style="font-size: 500%; letter-spacing: -2px;">Name</h1>
-    <h3 id="namehead" style="font-size: 200%;">SOFTWARE DEVELOPER</h3>
+    <h1 id="title" style="font-size: 500%; letter-spacing: -2px;">Justin Hess</h1>
+    <h3 id="title" style="font-size: 200%;">SOFTWARE DEVELOPER</h3>
   </div>
   <!-- buttons -->
   <div class="buttons borderless">
@@ -82,7 +82,6 @@
 
   <div class="application-main d-flex flex-auto flex-column" data-commit-hovercards-enabled="">
     <main>
-
       <div class="container-lg mt-5 px-3">
         <!-- '"` -->
         <!-- </textarea></xmp> -->
